Synchronization problem in Canvas/WebGLRenderingContext when listener asks for image https://bugs.webkit.org/show_bug.cgi?id=73228

Patch by Dana Jansens <danakj@chromium.org> on 2011-11-28
Reviewed by Kenneth Russell.

* html/canvas/WebGLRenderingContext.cpp:
(WebCore::WebGLRenderingContext::markContextChanged):

Canonical link: https://commits.webkit.org/89792@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101311 268f45cc-cd09-0410-ab3c-d52691b4dbfc